apps/monitoring/pve-exporter.yaml
# The token secret is created by hand (see README) so it never lands in git.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pve-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pve-exporter
  template:
    metadata:
      labels:
        app: pve-exporter
    spec:
      containers:
        - name: pve-exporter
          image: prompve/prometheus-pve-exporter:3.10.1
          ports:
            - name: http
              containerPort: 9221
          resources:
            requests:
              cpu: 10m
              memory: 48Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pve-exporter
  namespace: monitoring
spec:
  selector:
    app: pve-exporter
  ports:
    - name: http
      port: 9221
      targetPort: http
