apps/monitoring/ingress.tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics
  namespace: monitoring
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/http-redirect: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - metrics
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-metrics
                port:
                  number: 8428
